--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -19,7 +19,7 @@ div,p,a,h1,h2,h3,h4,h5,h6,img,body{
     font-size: 15px;
 }
 
-.sign-in form span{
+span{
     display: inline-block;
     color: #888888;
     font-size: 13px;
